opam-version: "1.2"
maintainer: "sandermail@gmail.com"
authors: [
  "Sander Spies"
]
homepage: "https://github.com/SanderSpies/ocaml-gist"
bug-reports: "https://github.com/SanderSpies/ocaml-gist/issues"
license: "MIT"
dev-repo: "https://github.com/SanderSpies/ocaml-gist.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "findlib"
  "js_of_ocaml" { >= "3.0.0" }
  "js_of_ocaml-compiler" { >= "3.0.0" }
  "js_of_ocaml-toplevel"
  "yojson"
  "str"
]
available: [ocaml-version = "4.04.1"]
